# twitter-automation-ai

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  BEST_PRACTICES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  app.py  install.ps1  install.sh  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  twitter_cookies.txt  v2.py
.github/workflows/: ci.yml  publish.yml
config/: account_id_cookies.json  accounts.example.json  accounts.json  settings.json
data/: README.md  proxy_pools_state.json
data/cookies/: dummy_cookies_example.json
data/metrics/: tech_innovator_001.json
data/proxies/: dummy_proxies.json
docs/: CONFIG_REFERENCE.md
presets/: README.md
presets/accounts/: brand_safe.json  community_posting.json  engagement_light.json  growth.json  replies_first.json
presets/settings/: beginner-chrome-undetected.json  beginner-defaults.json  beginner-proxies-hash.json  beginner-proxies-roundrobin.json
src/: data_models.py  main.py
src/core/: browser_manager.py  config_loader.py  llm_service.py
src/features/: analyzer.py  engagement.py  publisher.py  scraper.py
src/utils/: file_handler.py  logger.py  metrics.py  progress.py  proxy_manager.py  scroller.py
src/xuse/: __init__.py  cli.py  doctor.py  init_wizard.py  orchestrator.py  pipelines.py
tests/: conftest.py  test_cli.py  test_config_loader.py  test_env_keys.py  test_file_handler.py  test_llm_parsing.py  test_orchestrator_config.py  test_pipelines.py  test_proxy_manager.py  test_scraper_parsing.py
tests/mcp/: helpers.py  test_contract.py  (+2 more)
(+76 files in other folders)
